<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_tracking"
        android:icon="@drawable/ic_tracking"
        android:title="@string/tracking" />

    <item
        android:id="@+id/navigation_tracking_history"
        android:icon="@drawable/ic_history"
        android:title="@string/tracking_history" />

    <item
        android:id="@+id/navigation_sm_export"
        android:icon="@drawable/ic_export"
        android:title="@string/sm_export" />

    <item
        android:id="@+id/navigation_archive_status"
        android:icon="@drawable/ic_archive"
        android:title="@string/archive_status" />

    <item
        android:id="@+id/navigation_device_management"
        android:icon="@drawable/ic_devices"
        android:title="@string/device_management" />

    <item
        android:id="@+id/navigation_peer_sync"
        android:icon="@drawable/ic_sync"
        android:title="@string/peer_sync" />

</menu>
